# baiyangdian

./: .gitignore  README.md  pyproject.toml  ruff.toml
predict/: __init__.py  main.py  read.py  test.py
predict/data_processing/: __init__.py  column_mappings.py  dataset.py  load_data.py  preprocess.py  process_data.py  utils.py
predict/data_processing/load_data/: __init__.py  load_csv.py  load_nc.py  load_xls_xlsx.py
predict/data_processing/preprocess/: process_xls.py
predict/evaluate/: evaluate.py
predict/model/: __init__.py  evaluate.py  network.py  train.py
predict/trainer/: trainer.py
predict/utils/: __init__.py  logger.py  read.py  read_csv.py  read_xls.py  weather_data.py
tests/: test.py
