[tool.poetry]
name = "predict"
version = "0.1.0"
description = ""
authors = ["IZUMI-Zu <274620705z@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
netcdf4 = "^1.7.1.post2"
pandas = "^2.2.3"
numpy = "^2.1.2"
xlrd = "^2.0.1"
xarray = "^2024.10.0"
torch = "^2.5.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
tqdm = "^4.67.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[tool.poetry.scripts]
predict = "predict.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"